@@ -10,6 +10,8 @@
       config file - Issue 643 (David Precious, reported by meraxes)
     * Don't require a space after semi-colon delimiting multiple name=value
       cookie pairs - Issue 642 (David Precious, reported by travisbeck)
+    * Log if a view and or a layout is not found (Alberto Simões, reported
+      by David Previous)
 
 1.3079_02   28.08.2011
 
